Deploy backend API to Azure App Service with production configuration
Successfully deployed the Blogify backend API to Microsoft Azure App Service
using Node.js 24 LTS runtime. Configured environment variables for production,
validated build and startup process, and ensured the API is running correctly
on a Linux-based App Service plan. The backend is now live and accessible via
Azure, ready to be consumed by the frontend application.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstack-blog-backend",
+  "name": "blogify-backend-api-1210",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
